@@ -218,7 +218,7 @@ REPOSITORY
     <https://github.com/tupinek/Map-Tube-Malaga>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
@@ -226,7 +226,7 @@ DEDICATION
     I dedicate this module to my visit in Málaga.
 
 LICENSE AND COPYRIGHT
-     © 2015 Michal Špaček
+     © 2015 Michal Josef Špaček
      Artistic License
      BSD 2-Clause License
 
